--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     application:
         name: roombook
     datasource:
-        url: jdbc:postgresql://localhost:5432/mydb
+        url: jdbc:postgresql://localhost:5432/testdb
         username: testuser
         password: test
         driver-class-name: org.postgresql.Driver
