--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -17,7 +17,6 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    environment: production
 
     steps:
     - name: Checkout
@@ -26,7 +25,7 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+        role-to-assume: ${{ secrets.AWS_GHACTION_ROLE_ARN }}
         aws-region: ${{ env.AWS_REGION }}
 
     - name: Login to Amazon ECR
@@ -37,12 +36,13 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: ${{ secrets.AWS_ECR_REPO_NAME }}
-        IMAGE_TAG: ${{ github.sha }}
+        ECR_REPOSITORY: roombook-ecr
+        COMMIT_HASH: ${{ github.sha }}
+        ENV_TYPE: ${{ github.ref == 'refs/heads/master' && 'prod' || 'dev' }}
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+        docker build -t ${ECR_REGISTRY}/${ECR_REPOSITORY}:${ENV_TYPE}_${COMMIT_HASH} .
+        docker push ${ECR_REGISTRY}/${ECR_REPOSITORY}:${ENV_TYPE}_${COMMIT_HASH}
+        echo "image=${ECR_REGISTRY}/${ECR_REPOSITORY}:${ENV_TYPE}_${COMMIT_HASH}" >> $GITHUB_OUTPUT
 
     # - name: Fill in the new image ID in the Amazon ECS task definition
     #   id: task-def
