--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -6,13 +6,16 @@ server:
 
 spring:
     jpa:
-        show-sql: false
         hibernate:
             ddl-auto: validate
+        show-sql: false
+        open-in-view: false
 
 logging:
-    pattern:
-        console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+    level:
+        org.springframework.web: WARN
+        org.hibernate: WARN
+        win.pluvivanto.roombook: INFO
 
 management:
     endpoints:
