--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 server:
     port: 8080
+    error:
+        include-stacktrace: always
+        include-message: always
+        include-binding-errors: always
 
 spring:
     application:
@@ -16,3 +20,19 @@ spring:
         properties:
             hibernate:
                 dialect: org.hibernate.dialect.PostgreSQLDialect
+                format_sql: true
+
+logging:
+    level:
+        org.springframework.web: DEBUG
+        org.hibernate: DEBUG
+        win.pluvivanto.roombook: DEBUG
+
+management:
+    endpoints:
+        web:
+            exposure:
+                include: "*"
+    endpoint:
+        health:
+            show-details: always
