--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -6,6 +6,11 @@ spring:
   datasource:
     url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: https://cognito-idp.us-east-1.amazonaws.com/us-east-1_TEST/.well-known/jwks.json
 
 logging:
   level:
